# smart-cv

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  TEX_DEPENDENCIES_KEPT.md
.claude/skills/custom-cv/: SKILL.md
.claude/skills/cv-audit/: SKILL.md
.claude/skills/extract-cv/: SKILL.md
curriculum-py/: job_spider.py  manifest.json  pyproject.toml  pyrightconfig.json  template_builder.py
curriculum-py/adapters/: __init__.py  _base.py  anthropic_tool.py  openai_compatible.py
curriculum-py/examples/: custom_cv_request.json  custom_cv_response.json
curriculum-py/renderers/: default.py
curriculum-py/schemas/: request.schema.json  response.schema.json
curriculum-py/src/cv_skill/: __init__.py  ats.py  cli.py  core.py  errors.py  schema.py
curriculum-py/tests/: conftest.py  test_ats.py  test_core.py  test_no_provider_imports.py  test_schema.py
prompts/: custom-cv.md  cv-audit.md  extract-cv.md
templates/default/: core_competencies.tex.j2  education.tex.j2  experience.tex.j2  heading.tex.j2  main.tex  skills.tex.j2  summary.tex.j2
