[project]
name = "cv-skill"
version = "0.1.0"
description = "Model-agnostic CV tailoring pipeline for LaTeX CVs"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "scrapy>=2.11",
    "markitdown[pdf]>=0.1",
    "jinja2>=3.1",
    "pydantic>=2.0",
]

[project.scripts]
cv-skill = "cv_skill.cli:main"

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
langchain = ["langchain-core>=0.3"]
cli = ["typer>=0.12"]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cv_skill"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
